--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "server/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "server/index.js"
-    }
-  ],
-  "functions": {
-    "server/index.js": {
-      "runtime": "nodejs20.x",
-      "memory": 1024,
-      "maxDuration": 10,
-      "regions": ["bom1"]
-    }
-  }
+  "version": 2
 }
